--- a/index.html
+++ b/index.html
@@ -82,8 +82,131 @@
    <h2> £11.00 </h2>
    </div>
    </div>
+</section>
+<!--Shop-->
+<section class="menu" id="menu"></section>
+     <div class="heading">
+      <h1>Our Menu</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur aliquid non saepe rem 
+         harum eaque ratione est molestias nobis, reiciendis voluptatibus sint iure, deserunt voluptate! 
+         Ducimus obcaecati quo magnam blanditiis.
+      </p>
 
-    </section>
+     </div>
+     <div class="menu-container">
+       <div class="menu-box"></div>
+       <div class="menu-img">
+         <img src="img/menu1.jpg" alt="">
+       </div>
+       <h3>Vegtable Pakora (stater)</h3>
+       <h2>£4.95</h2>
+       <i class='bx bxs-cart-add'></i>
+       </div>
+
+       <div class="menu-container">
+         <div class="menu-box"></div>
+         <div class="menu-img">
+           <img src="img/menu2.jpg" alt="">
+         </div>
+         <h3>Tandori Chicken (stater)</h3>
+         <h2>£6.95</h2>
+         <i class='bx bxs-cart-add'></i>
+         </div>
+
+         <div class="menu-container">
+            <div class="menu-box"></div>
+            <div class="menu-img">
+              <img src="img/menu3.jpeg" alt="">
+            </div>
+            <h3>Vegtable Samosa (stater)</h3>
+            <h2>£4.95</h2>
+            <i class='bx bxs-cart-add'></i>
+            </div>
+
+            <div class="menu-container">
+               <div class="menu-box"></div>
+               <div class="menu-img">
+                 <img src="img/menu4.jpg" alt="">
+               </div>
+               <h3>Mix Kabab (stater)</h3>
+               <h2>£6.95</h2>
+               <i class='bx bxs-cart-add'></i>
+               </div>
+
+               <div class="menu-container">
+                  <div class="menu-box"></div>
+                  <div class="menu-img">
+                    <img src="img/menu5.avif" alt="">
+                  </div>
+                  <h3>Chicken/Lamb Kormar (Main Course)</h3>
+                  <h2>£9.95</h2>
+                  <i class='bx bxs-cart-add'></i>
+                  </div>
+
+                  <div class="menu-container">
+                     <div class="menu-box"></div>
+                     <div class="menu-img">
+                       <img src="img/menu6.avif" alt="">
+                     </div>
+                     <h3>Chicken/Lamb Tikka Massala (Main Course)</h3>
+                     <h2>£9.95</h2>
+                     <i class='bx bxs-cart-add'></i>
+                     </div>
+
+                     <div class="menu-container">
+                        <div class="menu-box"></div>
+                        <div class="menu-img">
+                          <img src="img/menu7.jpeg" alt="">
+                        </div>
+                        <h3>Chicken/Lamb Saag (Main Course)</h3>
+                        <h2>£9.95</h2>
+                        <i class='bx bxs-cart-add'></i>
+                        </div>
+
+                        <div class="menu-container">
+                           <div class="menu-box"></div>
+                           <div class="menu-img">
+                             <img src="img/menu8.jpeg" alt="">
+                           </div>
+                           <h3>Cilli Gralic Chicken(Main Course)</h3>
+                           <h2>£9.95</h2>
+                           <i class='bx bxs-cart-add'></i>
+                           </div>
+
+                           <div class="menu-container">
+                              <div class="menu-box"></div>
+                              <div class="menu-img">
+                                <img src="img/menu9.jpeg" alt="">
+                              </div>
+                              <h3>Chicken/Lamb Shaslik(Main Course)</h3>
+                              <h2>£11.95</h2>
+                              <i class='bx bxs-cart-add'></i>
+                              </div>
+
+                              <div class="menu-container">
+                                 <div class="menu-box"></div>
+                                 <div class="menu-img">
+                                   <img src="img/menu10.jpg" alt="">
+                                 </div>
+                                 <h3>Pilu Rice/Plain Rice</h3>
+                                 <h2>£2.95</h2>
+                                 <i class='bx bxs-cart-add'></i>
+                                 </div>
+
+                                 <div class="menu-container">
+                                    <div class="menu-box"></div>
+                                    <div class="menu-img">
+                                      <img src="img/menu11.jpg" alt="">
+                                    </div>
+                                    <h3>Garlic/Plain Naan</h3>
+                                    <h2>£2.95</h2>
+                                    <i class='bx bxs-cart-add'></i>
+                                    </div>
+                                    
+ 
+     </div>
+
+
        <!--Link To JS-->
        <script src="main.js"></script>
     </body>
