--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about us">About Us</a></li>
             <li><a href="#menu">Menu</a></li>
-            <li><a href="#register">Sign Up</a></li>
             <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#register">Sign Up</a></li>
+
          </ul>
     </header>
     <!--Home-->
@@ -123,7 +124,7 @@
             <i class='bx bxs-cart-add'></i>
             </div>
 
-            <div class="menu-container">
+         <div class="menu-container">
                <div class="menu-box"></div>
                <div class="menu-img">
                  <img src="img/menu4.jpg" alt="">
@@ -133,7 +134,7 @@
                <i class='bx bxs-cart-add'></i>
                </div>
 
-               <div class="menu-container">
+          <div class="menu-container">
                   <div class="menu-box"></div>
                   <div class="menu-img">
                     <img src="img/menu5.avif" alt="">
@@ -143,7 +144,7 @@
                   <i class='bx bxs-cart-add'></i>
                   </div>
 
-                  <div class="menu-container">
+            <div class="menu-container">
                      <div class="menu-box"></div>
                      <div class="menu-img">
                        <img src="img/menu6.avif" alt="">
@@ -151,9 +152,9 @@
                      <h3>Chicken/Lamb Tikka Massala (Main Course)</h3>
                      <h2>£9.95</h2>
                      <i class='bx bxs-cart-add'></i>
-                     </div>
+            </div>
 
-                     <div class="menu-container">
+             <div class="menu-container">
                         <div class="menu-box"></div>
                         <div class="menu-img">
                           <img src="img/menu7.jpeg" alt="">
@@ -161,9 +162,9 @@
                         <h3>Chicken/Lamb Saag (Main Course)</h3>
                         <h2>£9.95</h2>
                         <i class='bx bxs-cart-add'></i>
-                        </div>
+                </div>
 
-                        <div class="menu-container">
+                <div class="menu-container">
                            <div class="menu-box"></div>
                            <div class="menu-img">
                              <img src="img/menu8.jpeg" alt="">
@@ -171,9 +172,9 @@
                            <h3>Cilli Gralic Chicken(Main Course)</h3>
                            <h2>£9.95</h2>
                            <i class='bx bxs-cart-add'></i>
-                           </div>
+                  </div>
 
-                           <div class="menu-container">
+                  <div class="menu-container">
                               <div class="menu-box"></div>
                               <div class="menu-img">
                                 <img src="img/menu9.jpeg" alt="">
@@ -181,9 +182,9 @@
                               <h3>Chicken/Lamb Shaslik(Main Course)</h3>
                               <h2>£11.95</h2>
                               <i class='bx bxs-cart-add'></i>
-                              </div>
+                  </div>
 
-                              <div class="menu-container">
+                   <div class="menu-container">
                                  <div class="menu-box"></div>
                                  <div class="menu-img">
                                    <img src="img/menu10.jpg" alt="">
@@ -191,9 +192,9 @@
                                  <h3>Pilu Rice/Plain Rice</h3>
                                  <h2>£2.95</h2>
                                  <i class='bx bxs-cart-add'></i>
-                                 </div>
+                  </div>
 
-                                 <div class="menu-container">
+                  <div class="menu-container">
                                     <div class="menu-box"></div>
                                     <div class="menu-img">
                                       <img src="img/menu11.jpg" alt="">
@@ -201,9 +202,48 @@
                                     <h3>Garlic/Plain Naan</h3>
                                     <h2>£2.95</h2>
                                     <i class='bx bxs-cart-add'></i>
-                                    </div>
-                                    
+                  </div>
+
  
+     </div>
+
+     <section class="contact" id="contact">
+       <div class="heading">
+       <h2> Contact Us</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, corporis ut culpa animi amet odit? Impedit, sunt, ducimus porro inventore quas molestias nesciunt doloribus excepturi quam recusandae illum et cumque!
+
+       </p>
+      </div>
+      <div class="contact-container">
+         <div class="contact-info">
+          <h2>Get In Touch</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel iste perferendis voluptas porro, optio, iure praesentium iusto consequatur neque ipsam animi odio fuga nisi nesciunt ducimus sapiente repellat mollitia!
+
+         </p>
+         <div class="address">
+          <i class='bx bxs-map'><span>Edinburgh</span></i>
+          <i class='bx bxs-phone'><span>0044</span></i>
+          <i class='bx bxs-envelope'></i><span>contact@dean.com</span>
+         </div>
+         <div class="social">
+          <a href="#"><i class='bx bx1-facebook'></i></a>
+         </div>
+         </div>
+
+         <div class="contact-form">
+          <form action="">
+            <input type="text" placeholder="Name*">
+            <input type="email" name="" id="" placeholder="Email*">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <input type="button" value="Submit" class="btn">
+          </form>
+         </div>
+      </div>
+     </section>
+
+     <!--Copyright-->
+     <div class="copyright">
+      <p>&#169; Javid Mansur. Edinburgh Napier University. 2023</p>
      </div>
 
 
