--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <!--Home-->
     <section class="home" id="home">
       <div class="home-text">
-         <span>Welcome Our Online Food Delivery Service (indian cuisine)</span>
-         <h1> Fresh Food <br>Collection or Delivery</h1>
-         <p>Order food from our website and you can collect your food or we can delivery the food to your address.</p>
+         <span>Welcome to Our Online Food Delivery Service (indian cuisine)</span>
+         <h1> DEAN TAKEAWAY <br>Fresh food, Collection or Delivery.</h1>
+         <p>One of the best Indian Takeaway in Edinburgh. We are serving tasty food to customer and giving best customer service. 
+            We got very hardworking and well trained staff. Order food from our website and you can collect your food or we can delivery the food to your address.</p>
          <a href="#" class="btn">Menu</a>
 
       </div>
@@ -88,9 +89,9 @@
 <section class="menu" id="menu"></section>
      <div class="heading">
       <h1>Our Menu</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur aliquid non saepe rem 
-         harum eaque ratione est molestias nobis, reiciendis voluptatibus sint iure, deserunt voluptate! 
-         Ducimus obcaecati quo magnam blanditiis.
+      <p>Please Order food from our Menu. One of the best Indian cuisine. Our chef is very expirience and he can make any special dishes which one not included in
+        our Menu. Please get in touch and let us know your special choices. We are more than happy to help customer. We also care about customer who got food allegies and want gluten
+        free meal, Please talk to our special staff for more details. 
       </p>
 
      </div>
@@ -210,14 +211,14 @@
      <section class="contact" id="contact">
        <div class="heading">
        <h2> Contact Us</h2>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, corporis ut culpa animi amet odit? Impedit, sunt, ducimus porro inventore quas molestias nesciunt doloribus excepturi quam recusandae illum et cumque!
+       <p> Contact us if you need any ideas about special meal. Our staff are here to help. 
 
        </p>
       </div>
       <div class="contact-container">
          <div class="contact-info">
           <h2>Get In Touch</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel iste perferendis voluptas porro, optio, iure praesentium iusto consequatur neque ipsam animi odio fuga nisi nesciunt ducimus sapiente repellat mollitia!
+          <p> Please contact us and order your lovely meal.
 
          </p>
          <div class="address">
