--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <section class="about" style="background: #eee;">
       <h1>Recipe</h1>
       <video style="width: 100%;height: auto;" controls muted autoplay loop>
-        <source src="video/CookingVideo.mp4" type="video/mp4">
+        <source src="video/CookingVideo.mov" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     </section>
