--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <span>Online Food Delivery Service <br><span class="badge">indian cuisine</span></span>
          <h1>Fresh Food, Collection or Delivery</h1>
          <p> One of the best Indian takeaways in Edinburgh. We are serving tasty food to the customer and giving the best customer service. 
-          We got very hardworking and well-trained staff. 
+          We got very hardworking and well-trained staff. Opening hours: Seven days in a week. 4:00pm to 11:00pm o'clock. 
           </p>
          <a href="#menu" class="btn">Menu</a>
 
